Fix hidden close button for easter egg on iOS devices

--- a/css/egg.css
+++ b/css/egg.css
@@ -19,7 +19,11 @@ div#egg {
 div#egg > button#closeEgg {
   align-self: flex-end;
   background: white;
+  border: 1px solid;
+  border-radius: 0.2em;
+  cursor: pointer;
   font-size: 1.2em;
+  position: absolute;
 }
 div#egg > div.modal-body {
   margin: 1rem;
